[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-library-template"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
python-library-template = "python_library_template.help:main"


[project.optional-dependencies]
dev = ["build", "black", "mypy", "twine"]
test = ["pytest", "pytest-watch"]

[tool.setuptools]
include-package-data = true


[tool.setuptools.packages.find]
where = ["src"]
[tool.setuptools.package-data]
yatotem2scdl = ["data/**"]